--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   },
   "homepage": "https://CataArt.github.io/Umni/",
   "scripts": {
-    "build": "tsc",
-    "deploy": "gh-pages -d ."
+    "build": "webpack",
+    "deploy": "gh-pages -d .",
+    "test": "jest"
   },
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
