--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "homepage": "https://CataArt.github.io/Umni/",
   "scripts": {
     "build": "webpack",
-    "deploy": "gh-pages -d .",
+    "deploy": "gh-pages -d ./public",
     "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
